[package]
name = "javascriptcore6"
version = "0.1.0"
edition = "2021"
authors = ["The Gtk-rs Project Developers"]
categories = ["api-bindings", "gui"]
description = "Rust bindings for webkit-gtk library"
repository = "https://gitlab.gnome.org/World/Rust/javascriptcore6-rs"
license = "MIT"
documentation = "https://world.pages.gitlab.gnome.org/Rust/javascriptcore6-rs/"
keywords = ["webkit", "gtk-rs", "gnome", "GUI"]
exclude = [
    "gir-files/*",
]

[features]
dox = ["ffi/dox", "glib/dox"]

[dependencies]
bitflags = "^1.0"
once_cell = "1.8"
libc = "^0.2"
ffi = { package = "javascriptcore6-sys", path = "sys", version = "0.1" }

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core.git"
version = "0.17"
branch = "0.17"
