[package]
name = "webkit-web-process-extension6"
version = "0.1.0"
edition = "2021"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
categories = ["api-bindings", "gui"]
description = "Rust bindings for WebKitWebProcessExtension 6"
repository = "https://gitlab.gnome.org/World/Rust/webkit6-rs"
license = "MIT"
documentation = "https://world.pages.gitlab.gnome.org/Rust/webkit6-rs/stable/latest/docs/webkit_web_process_extension6"
keywords = ["webkit", "gtk-rs", "gnome", "GUI"]
exclude = [
    "gir-files/*",
    "webkit-gir-files",
]

[features]
dox = ["ffi/dox", "glib/dox"]

[dependencies]
bitflags = "^1.0"
once_cell = "1.8"
libc = "^0.2"
ffi = { package = "webkit-web-process-extension6-sys", path = "sys", version = "0.1" }
javascriptcore = { package = "javascriptcore6", path = "../javascriptcore6", version = "0.1" }

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.7"

[dependencies.gdk]
package = "gdk4"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.7"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"

[dependencies.soup]
package = "soup3"
git = "https://gitlab.gnome.org/World/Rust/soup3-rs"
version = "0.4"
