[package]
name = "webkit6"
version = "0.1.0"
edition = "2021"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
categories = ["api-bindings", "gui"]
description = "Rust bindings for WebKit 6.0"
repository = "https://gitlab.gnome.org/World/Rust/webkit6-rs"
license = "MIT"
documentation = "https://world.pages.gitlab.gnome.org/Rust/webkit6-rs/stable/latest/docs/webkit6"
keywords = ["webkit", "gtk-rs", "gnome", "GUI"]
exclude = [
    "gir-files/*",
    "webkit-gir-files",
]

[features]
dox = ["ffi/dox", "gio/dox", "glib/dox", "gdk/dox", "gtk/dox"]

[dependencies]
bitflags = "^1.0"
once_cell = "1.8"
libc = "^0.2"
ffi = { package = "webkit6-sys", path = "sys", version = "0.1" }
javascriptcore = { package = "javascriptcore6", path = "../javascriptcore6", version = "0.1" }


[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4-rs.git"
package = "gtk4"
version = "0.6"
branch = "0.6"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk4-rs.git"
package = "gdk4"
version = "0.6"
branch = "0.6"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core.git"
version = "0.17"
branch = "0.17"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core.git"
version = "0.17"
branch = "0.17"

[dependencies.soup]
package = "soup3"
git = "https://gitlab.gnome.org/World/Rust/soup3-rs"
version = "0.4"