[package]
name = "javascriptcore6-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.javascriptcoregtk_6_0]
name = "javascriptcoregtk-6.0"
version = "2.40.0"

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.17"
branch = "0.17"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.17"
branch = "0.17"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = ["glib/dox", "gobject/dox"]
