[package]
name = "webkit6-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
categories = ["api-bindings", "gui"]
description = "FFI bindings for WebKit 6.0"
repository = "https://gitlab.gnome.org/World/Rust/webkit6-rs"
license = "MIT"
documentation = "https://world.pages.gitlab.gnome.org/Rust/webkit6-rs/stable/latest/docs/webkit6_sys"
keywords = ["webkit", "gtk-rs", "gnome", "GUI"]
exclude = ["gir-files/*", "webkit-gir-files"]

[package.metadata.system-deps.webkitgtk_6_0]
name = "webkitgtk-6.0"
version = "2.40"

[package.metadata.system-deps.webkitgtk_6_0.v2_42]
version = "2.42"

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"

[dependencies.gio]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"

[dependencies.gdk]
package = "gdk4-sys"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.7"

[dependencies.gtk]
package = "gtk4-sys"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.7"

[dependencies.soup]
package = "soup3-sys"
git = "https://gitlab.gnome.org/World/Rust/soup3-rs"
version = "0.4"

[dependencies.javascriptcore]
package = "javascriptcore6-sys"
path = "../../javascriptcore6/sys"
version = "0.1"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = ["glib/dox", "gobject/dox", "gio/dox", "javascriptcore/dox", "soup/dox", "gdk/dox", "gtk/dox"]
v2_42 = []
